can now edit calendar!!! Bug: calendar picker ui is stuck inside modal

--- a/ADMDashboard/WebContent/css/calendar/calendar.css
+++ b/ADMDashboard/WebContent/css/calendar/calendar.css
@@ -17,3 +17,6 @@ width: 50% !important;
 height: 60% !important;
 	}
 	
+#event_modal .indent{
+	margin-left:1em;
+}
